--- a/geoportal_app/static/css/leaflet.css
+++ b/geoportal_app/static/css/leaflet.css
@@ -138,7 +138,7 @@
 .leaflet-top,
 .leaflet-bottom {
 	position: absolute;
-	z-index: 1000;
+	z-index: 2500; /* Increased from 1000 to be above sidebar (2000) */
 	pointer-events: none;
 	}
 .leaflet-top {
